Added testing scripts.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 pytest
-bgapi
+# bgapi ## Use my fork of bgapi for the moment - it has some important fixes.
+git+git://github.com/VRGhost/bgapi.git#egg=bgapi
