Added dev/production requirements.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,1 @@
-pytest
-# bgapi ## Use my fork of bgapi for the moment - it has some important fixes.
-git+git://github.com/VRGhost/bgapi.git#egg=bgapi
+-r requirements/prod.txt
