--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,9 @@
   ],
   "dependencies": {
     "angular": "^1.5.9",
-    "angular-resource": "^1.5.9"
+    "angular-resource": "^1.5.9",
+    "angular-bootstrap": "^2.3.0",
+    "angular-xeditable": "^0.5.0",
+    "components-font-awesome": "^4.7.0"
   }
 }
