--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
+before_install:
+  - sudo apt-get install -y enchant
 install:
   - pip install -r requirements/dev.txt
 # command to run tests
