Dockerfile fixes mk1

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "PyPush",
+  "name": "py_push",
   "homepage": "https://github.com/VRGhost/PyPush",
   "authors": [
     "Ilja Orlovs <ilja@wise.fish>"
